--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="jmbyJvOaS-djJzLZz-JVg1YB0Dkiy2TLpHGWprYbA-I" />
   <meta name="description" content="Descubra os benefícios da Maca Peruana Negra com Boro para sua saúde. Compre agora e experimente a diferença!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maca Peruana Negra com Boro</title>
